kubernets/ms-texcargo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-hub-rabbit-service
  # namespace: hub-dev
  labels:
    app: ms-hub-rabbit-app
spec:
  type: ClusterIP
  selector:
    app: ms-hub-rabbit-app
  ports:
    - port: 80
      targetPort: 3000
