kubernets/argocd_traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: argocd
  name: argocd-traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.apps.com.pe`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls:
    certResolver: myresolver
